<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.creativetrends.simple.app.preferences.PreferenceCategory
        android:title="@string/news_feed_preferences">

        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="false"
            android:key="top_news"
            android:summary="@string/top_news_first_sum"
            android:title="@string/top_news_first_title" />


        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="false"
            android:key="stories"
            android:summary="Enable to hide stories within the news feed."
            android:title="Hide Stories" />

        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="false"
            android:key="hide_people"
            android:summary="Hide people you may know on the news feed."
            android:title="@string/people_you_hint" />


        <com.creativetrends.simple.app.preferences.ListPreferenceCompat
            android:defaultValue="100"
            android:entries="@array/default_font_size_entries"
            android:entryValues="@array/default_font_size_entry_values"
            android:key="font_size"
            android:summary="%s."
            android:title="Font Size" />

        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="false"
            android:key="select"
            android:title="Copy Text"
            android:summary="When enabled you can copy text with Facebook."/>


        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:key="expand_fab"
            android:summary="When enabled Simple will display the floating action button expanded. Disable to use the standard floating action button."
            android:title="Expanded FAB" />


        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:key="show_panels"
            android:summary="Enable to show panels within the news feed and notifications tabs for quick actions such as switching between feeds and marking all notifications as read. Disable to show these actions in the overflow menu (three dots)."
            android:title="Show Panels" />





        <com.creativetrends.simple.app.preferences.CustomSwitchPreference
            android:defaultValue="false"
            android:key="no_images"
            android:summary="@string/no_images_hint_new"
            android:title="@string/no_images" />

        <com.creativetrends.simple.app.preferences.Preference
            android:key="clear_search"
            android:summary="Tap here to clear Simple's Search History. This does not clear your search history on Facebook"
            android:title="Clear Simple Search History" />


    </com.creativetrends.simple.app.preferences.PreferenceCategory>
</PreferenceScreen>