<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



        <TextView
            android:id="@+id/update_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/update_app_sum"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/status_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/current_status_mention"
            android:textSize="13sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/most_reported"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/update_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/current_status_issues"
            android:textStyle="bold"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/status_click_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/current_status_mention"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/current_status_results"
            android:textStyle="italic"
            android:textSize="12sp" />


    </LinearLayout>
</ScrollView>