<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/customactivityoncrash_activity_horizontal_margin"
            android:paddingTop="@dimen/customactivityoncrash_activity_vertical_margin"
            android:paddingRight="@dimen/customactivityoncrash_activity_horizontal_margin"
            android:paddingBottom="@dimen/customactivityoncrash_activity_vertical_margin">

            <ImageView
                android:id="@+id/customactivityoncrash_error_activity_image"
                android:layout_width="110dp"
                android:layout_height="0dp"
                android:layout_weight="2.0"
                android:contentDescription="@null"
                android:src="@drawable/ic_dead" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="16dp"
                android:text="@string/error_occurred_explanation"
                android:textSize="14sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/customactivityoncrash_activity_horizontal_margin"
                android:paddingTop="@dimen/customactivityoncrash_activity_vertical_margin"
                android:paddingRight="@dimen/customactivityoncrash_activity_horizontal_margin"
                android:paddingBottom="@dimen/customactivityoncrash_activity_vertical_margin">

                <Button
                    android:id="@+id/customactivityoncrash_error_activity_restart_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/error_activity_close_app" />

                <Button
                    android:id="@+id/customactivityoncrash_error_activity_more_info_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_activity_error_details" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>